--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://restaurant-online-api-production.up.railway.app",
+  "proxy": "https://restaurantapi-3anw.onrender.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
