--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://restaurantapi-3anw.onrender.com",
+  "proxy": "https://www.rrestaurantbk.shoponlinemarket.cloud",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
